--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
 
         <activity android:name="UI.Registro"/>
         <activity android:name="UI.Login"/>
+        <activity android:name="UI.Home"/>
 
         <activity
             android:name="Activities.MainActivity"
